4 April 2024 v528: Media humanization test: Legend text changed from “0 of 2” to “0/2”. 3 step test is now shown instead of 2 step. Colours are inverted. Good = light colour. Bad = dark colour Questionnaires: Translated “Is dit een follow-up artikel” to English. Design: Gradient background removed from large roaddanger title. Questionnaire > Settings: Fixed: Selected tab text was not visible.

--- a/main.css
+++ b/main.css
@@ -79,9 +79,9 @@ a:hover, .link:hover {
   font-size: 110px;
   font-weight: 500;
   letter-spacing: -0.08em;
-  background: linear-gradient(to right, #ffffff 0%, #f23825 70%);
-  background-clip: text;
-  color: transparent;
+  /*background: linear-gradient(to right, #ffffff 0%, #f23825 70%);*/
+  /*background-clip: text;*/
+  /*color: transparent;*/
 }
 
 .postText {
@@ -1268,21 +1268,20 @@ h2, .pageSubTitleFont, .sectionTitle {
 }
 
 .tabBar > div {
-  display:       inline-flex;
-  font-size:     18px;
-  padding:       5px 10px;
-  border-bottom: 5px solid #ffffff00;
+  display: inline-flex;
+  font-size: 18px;
+  padding: 5px 10px;
 }
 
 .tabBar > div:hover {
-  color:            var(--color-hover);
+  color: var(--color-hover);
   background-color: var(--row-hover-bgcolor);
-  cursor:           pointer;
+  cursor: pointer;
 }
 
 .tabSelected {
-  border-color: var(--selected-bgcolor) !important;
   color: var(--selected-color) !important;
+  background-color: var(--selected-bgcolor);
 }
 
 .dataTable {
